# document-extraction-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 86647ee67c83_initial_tables.py
eval/: deepeval_suite.py  generate_samples.py  metrics.py  runner.py  scorer.py
eval/ground_truth/invoices/: invoice_001.json  invoice_002.json  invoice_003.json  invoice_004.json  invoice_005.json  invoice_006.json  invoice_007.json  invoice_008.json  invoice_009.json  invoice_010.json
src/extraction_engine/: config.py  main.py
src/extraction_engine/api/: deps.py  responses.py  routes.py
src/extraction_engine/db/: models.py  repository.py  session.py
src/extraction_engine/extraction/: extractor.py  prompts.py  retry.py
src/extraction_engine/pipeline/: pipeline.py
src/extraction_engine/preprocessing/: image.py  loader.py  ocr.py
src/extraction_engine/schemas/: base.py  invoice.py  kyc.py  registry.py  shipping.py
src/extraction_engine/validation/: confidence.py  validators.py
src/extraction_engine/worker/: celery_app.py  tasks.py
tasks/: lessons.md  todo.md
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_extraction.py  test_metrics.py  test_schemas.py  test_validators.py
